eclipse-workspace/Surya Dev Org/src/objects/Credit_History__c.object
<CustomObject>
    <fields>
        <fullName>Account_Info__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Info</label>
        <referenceTo>Account_Info__c</referenceTo>
        <relationshipLabel>Credit History</relationshipLabel>
        <relationshipName>Credit_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Score__c</fullName>
        <label>Credit Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Very Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eligible_for_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible for Loan?</label>
        <type>Checkbox</type>
    </fields>
    <label>Credit History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Eligible_for_Loan__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SSN-{000000000}</displayFormat>
        <label>SSN</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>